@@ -2,6 +2,10 @@
 
 * Removed 'Add one...' link on vidoes/index when you don't
   have permissions to add a video (when no videos present)
+* Updated default pemissions in plugin settings
+  * Set so non-members are not able to even be permitted to modify,
+    delete, or add videos to a project
+
 == 0.1.0 2011-04-21
 
 * 1 major enhancement:
